...
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_500"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
...
